syntax = "proto3";

option go_package = "github.com/eolinker/eosc/service";
package service;
import "traffic.proto";
import "listen.proto";

message ProcessLoadArg{
  repeated  PbTraffic traffic = 1;
  ListensMsg listensMsg = 2;
  map<string,string> extends = 3;
}
