
syntax = "proto3";


option go_package = "github.com/eolinker/eosc/traffic";
package service;

message PbTraffic {
  uint64 FD =1;
  string Addr=2;
  string Network=3;
}

message PbTraffics{
  repeated PbTraffic traffic=1;
}